<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout tools:context=".ResultActivityh" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/win_message"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/result_txt"/>

    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/player_name_edit" android:inputType="text" android:hint="@string/result_name_edit_text_hint"/>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/save_to_db" android:id="@+id/save_to_db_btn"/>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/okay" android:id="@+id/restart_btn"/>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/show_db" android:id="@+id/show_db_btn"/>

</LinearLayout>